# skin-disease-detection

./: .gitignore  Makefile  README.md  app.py  app2.py  env_example.txt  fireworks_client.py  gemini_client.py  huggingface_client2.py  index.html  models.py  ollama_client.py  pyproject.toml
